--- a/style.css
+++ b/style.css
@@ -17,7 +17,18 @@
 }
 
 html {
+    scrollbar-width: none;
+}
+html::-webkit-scrollbar {
+    display: none;
+}
+body {
+    -ms-overflow-style: none;
+}
+
+html {
     scroll-behavior: smooth;
+    scrollbar-width: none;
 }
 
 @media (prefers-reduced-motion: reduce) {
